@@ -4,6 +4,13 @@
 
 	* core/Form/PrimitiveString.class.php: '0' is a valid string too.
 
+2008-03-31	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* test/core/PrimitiveDateTest.class.php: synced with reality.
+
+	* core/Base/Time.class.php: several fixes for parsing issues were
+	backported from trunk.
+
 2008-02-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
